# Baumachschinen-KI-Chatbot

./: .gitignore  README.md  build-docker.bat  deploy.sh  docker-compose.yml
.claude/: settings.local.json
.github/workflows/: deploy.yml  docker-build.yml
backend/: .dockerignore  .gitignore  Dockerfile  create_admin.py  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
backend/.github/workflows/: backend-ci.yml
backend/app/: __init__.py  config.py  main.py
backend/app/api/v1/: __init__.py  dependencies.py
backend/app/api/v1/endpoints/: admin.py  auth.py  chat.py  documents.py  health.py  queue.py
backend/app/core/: database.py  logging_config.py  session.py
backend/app/models/: __init__.py  audit_log.py  conversation.py  document.py  upload_queue.py  user.py
backend/app/schemas/: __init__.py  admin.py  auth.py  chat.py  document.py  user.py
backend/app/services/: __init__.py  ai_agent.py  document_events.py  document_processor.py  email_service.py  openai_service.py  pinecone_service.py  postgresql_service.py  upload_queue_service.py
backend/app/utils/: __init__.py  password.py  query_monitor.py  security.py
backend/email_previews/: 01_verification_email.html  02_admin_notification.html  03_approval_email.html  04_password_reset.html  05a_rejection_email_with_reason.html  05b_rejection_email_without_reason.html  index.html
backend/tests/: conftest.py
database/: requirements.txt
database/config/: mongodb_config.py  pinecone_config.py  postgresql_config.py
database/indexes/: create_indexes.py
database/schemas/: audit_logs_schema.py  conversations_schema.py  document_metadata_schema.py  users_schema.py
frontend/: .dockerignore  Dockerfile  index.html  jest.config.js  nginx-default.conf  nginx.conf  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.app.json  tsconfig.test.json  vite.config.ts
frontend/.github/workflows/: frontend-ci.yml
frontend/e2e/: admin.spec.ts  auth.spec.ts  chat.spec.ts  documents.spec.ts
frontend/src/: App.tsx  index.css
frontend/src/__mocks__/services/: api.ts
frontend/src/components/: ErrorBoundary.tsx  ProtectedRoute.tsx  RootRedirect.tsx
frontend/src/components/__tests__/: ProtectedRoute.test.tsx
frontend/src/components/admin/: AllUsersTab.tsx  DocumentUploadTab.tsx  PendingApprovalsTab.tsx  index.ts
frontend/src/components/chat/: MessageInput.tsx  (+4 more)
frontend/src/hooks/: useAuth.ts  useChat.ts  useLocalStorage.ts  useMediaQuery.ts  useOnClickOutside.ts  useServerQueue.ts
frontend/src/pages/: AdminPage.tsx  ChatPage.tsx  CheckEmailPage.tsx  DocumentsPage.tsx  EmailVerificationPage.tsx  ForbiddenPage.tsx  ForgotPasswordPage.tsx  LoginPage.tsx  ProfilePage.tsx  RegisterPage.tsx  ResetPasswordPage.tsx
frontend/src/services/: adminService.ts  api.ts  authService.ts  chatService.ts  documentService.ts  queueService.ts
frontend/src/store/: authStore.ts  chatStore.ts  uiStore.ts
frontend/src/test-utils/: setup-before-env.ts  setup.ts  test-utils.tsx
frontend/src/types/: index.ts
frontend/src/utils/: translations.ts
infrastructure/monitoring/: loki-config.yml  prometheus-alerts.yml  prometheus.yml  promtail-config.yml
infrastructure/nginx/: chatbot.conf
(+20 files in other folders)
